# tear

./: CMakeLists.txt  README.md  Rakefile  build.sh  tear.gemspec
includes/: intl.h  settings.h
lib/: tear.rb
lib/tear/: app.rb  config.rb  drives.rb  filename.rb  formats.rb  logger.rb  version.rb
lib/tear/cdparanoia/: cdinfo.rb  cdripper.rb
lib/tear/cdrdao/: scanbus.rb
lib/tear/formats/: mp3.rb  wav.rb
lib/tear/ui/: config.rb  mainwindow.rb  progress.rb
spec/: config_spec.rb  rcov.opts  spec_helper.rb
spec/resources/: config
src/lib/: app.c  app.h  config.c  config.h  drives.c  drives.h  lib.c  settings.c
src/lib/ui/: config.c  config.h  drives.c  drives.h  formats.c  formats.h  mainwindow.c  mainwindow.h
src/main/: main.c
tasks/: rspec.rb
tests/: config.c  main.c  testFiles.h.in
tests/resources/: simpleconfig
