CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (Tear)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})

SET (Tear_VERSION_MAJOR 0)
SET (Tear_VERSION_MINOR 0)
SET (Tear_VERSION_MICRO 1)

CONFIGURE_FILE (
    "${PROJECT_SOURCE_DIR}/includes/config.h.in"
    "${PROJECT_BINARY_DIR}/includes/config.h"
)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/includes")

FILE(GLOB_RECURSE LibSources src/lib/*.c)
ADD_LIBRARY(libtear ${LibSources})

FILE(GLOB_RECURSE MainSources src/main/*.c)
ADD_EXECUTABLE(tear ${MainSources})
TARGET_LINK_LIBRARIES(tear libtear)

INSTALL(TARGETS tear 
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)
