CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (Tear)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})

ENABLE_TESTING()

SET (Tear_VERSION_MAJOR 0)
SET (Tear_VERSION_MINOR 0)
SET (Tear_VERSION_MICRO 1)

SET(CMAKE_C_FLAGS "-std=c99 -Wall")

CONFIGURE_FILE (
    "${PROJECT_SOURCE_DIR}/includes/config.h.in"
    "${PROJECT_BINARY_DIR}/includes/config.h"
)

CONFIGURE_FILE (
    "${PROJECT_SOURCE_DIR}/tests/testFiles.h.in"
    "${PROJECT_BINARY_DIR}/includes/testFiles.h"
)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/includes")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/includes")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

# Dependencies
FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

PKG_CHECK_MODULES(CDIO REQUIRED libcdio)
INCLUDE_DIRECTORIES(${CDIO_INCLUDE_DIRS})
LINK_DIRECTORIES(${CDIO_LIBRARY_DIRS})
ADD_DEFINITIONS(${CDIO_CFLAGS_OTHER})

PKG_CHECK_MODULES(CHECK check)
INCLUDE_DIRECTORIES(${CHECK_INCLUDE_DIRS})
LINK_DIRECTORIES(${CHECK_LIBRARY_DIRS})
ADD_DEFINITIONS(${CHECK_CFLAGS_OTHER})

# Sources
FILE(GLOB_RECURSE LibSources src/lib/*.c)
ADD_LIBRARY(libtear ${LibSources})
TARGET_LINK_LIBRARIES(libtear ${GTK3_LIBRARIES})
TARGET_LINK_LIBRARIES(libtear ${CDIO_LIBRARIES})

FILE(GLOB_RECURSE MainSources src/main/*.c)
ADD_EXECUTABLE(tear ${MainSources})
TARGET_LINK_LIBRARIES(tear libtear)

# Tests
FILE(GLOB_RECURSE TestSources tests/*.c)
ADD_EXECUTABLE(testtear ${TestSources})
TARGET_LINK_LIBRARIES(testtear libtear)
TARGET_LINK_LIBRARIES(testtear ${CHECK_LIBRARIES})
ADD_TEST(tear testtear)

INSTALL(TARGETS tear 
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)
